--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org"
-xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+<html lang="pt" xmlns:th="http://www.thymeleaf.org"
+	xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
 <meta charset="UTF-8">
 </head>
@@ -15,34 +15,45 @@ xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 			</button>
 			<div class="collapse navbar-collapse" id="navbarNavDropdown">
 				<ul class="navbar-nav">
-					<li class="nav-item active"><a class="nav-link" href="/">Home
-							<span class="sr-only">(current)</span>
+					<li class="nav-item active"><a class="nav-link" href="/"
+						th:text="#{menu.home}"> <span class="sr-only">(current)</span>
 					</a></li>
-					<li class="nav-item"><a class="nav-link" href="/users">Users</a></li>
-					<li class="nav-item"><a class="nav-link" href="#">Features</a>
-					</li>
+					<li class="nav-item"><a class="nav-link" href="/products"
+						th:text="#{menu.products}"></a></li>
+					<li class="nav-item"><a class="nav-link" href="#"
+						th:text="#{menu.services}"></a></li>
+					<li sec:authorize="hasRole('ROLE_ADMIN')" class="nav-item dropdown"><a
+						class="nav-link dropdown-toggle" href="#"
+						id="navbarDropdownMenuLink" role="button" data-toggle="dropdown"
+						aria-haspopup="true" aria-expanded="false"
+						th:text="#{menu.configuration}"></a>
+						<div class="dropdown-menu bg-dark"
+							aria-labelledby="navbarDropdownMenuLink">
+							<a class="dropdown-item text-light" href="/users" th:text="#{menu.configuration.users}"></a> <a
+								class="dropdown-item text-light" href="/products/add" th:text="#{menu.configuration.product.add}"></a>
+						</div></li>
 					<li class="nav-item dropdown"><a
 						class="nav-link dropdown-toggle" href="#"
 						id="navbarDropdownMenuLink" role="button" data-toggle="dropdown"
-						aria-haspopup="true" aria-expanded="false"> Configurations </a>
+						aria-haspopup="true" aria-expanded="false"
+						th:text="#{menu.locale}"></a>
 						<div class="dropdown-menu bg-dark"
 							aria-labelledby="navbarDropdownMenuLink">
-							<a class="dropdown-item text-light" href="#">Action</a> <a
-								class="dropdown-item text-light" href="#">Another action</a> <a
-								class="dropdown-item text-light" href="#">Something else
-								here</a>
+							<a class="dropdown-item text-light" href="?locale=pt" rel="nofollow" th:text="#{menu.locale.pt}"></a> <a
+								class="dropdown-item text-light" href="?locale=en_US" rel="nofollow" th:text="#{menu.locale.en}"></a>
 						</div></li>
 				</ul>
 				<!-- Confitionals if authentication -->
 				<ul class="ml-auto navbar-nav">
-					<li th:if="${principal}" class="nav-item"><a
-						class="nav-link text-dark btn btn-success mr-1" th:href="@{login}">Login</a></li>
-					<li th:if="${#authentication}" class="nav-item"><a
+					<li sec:authorize="!isAuthenticated()" class="nav-item"><a
+						class="nav-link text-dark btn btn-success mr-1" th:href="@{login}"
+						th:text="#{authentication.login}"></a></li>
+					<li sec:authorize="!isAuthenticated()" class="nav-item"><a
 						class="nav-link text-dark btn btn-warning ml-1"
-						th:href="@{signin} ">Cadastro</a></li>
-					<li th:if="${#authentication}" class="nav-item"><a
+						th:href="@{signin}" th:text="#{authentication.signin}"></a></li>
+					<li sec:authorize="isAuthenticated()" class="nav-item"><a
 						class="nav-link text-dark btn btn-danger ml-1"
-						th:href="@{logout} ">Logout</a></li>
+						th:href="@{logout} " th:text="#{authentication.logout}"></a></li>
 				</ul>
 			</div>
 		</nav>
@@ -50,3 +61,6 @@ xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 	</div>
 </body>
 </html>
+
+
+
