--- a/src/main/resources/templates/signin.html
+++ b/src/main/resources/templates/signin.html
@@ -11,48 +11,47 @@
 
 	<div class="container">
 		<div class="jumbotron">
-			<h2>Cadastro</h2>
+			<h2 th:text="#{signin.title}"></h2>
 		</div>
 
 		<div class="ml-auto col-6 mr-auto">
-			<h3 class="text-center m-1">Create a new account</h3>
+			<h3 class="text-center m-1" th:text="#{signin.desc}"></h3>
 			<form action="#" th:action="@{/signin}" th:object="${user}" method="POST">
 				<input type="hidden" th:field="*{id}">
 				<div class="input-group mb-3">
 					<div class="input-group-prepend">
-						<span class="input-group-text" id="basic-addon1">Name</span>
+						<span class="input-group-text" id="basic-addon1" th:text="#{field.name}"></span>
 					</div>
-					<input th:field="*{name}" type="text" class="form-control" placeholder="Name"
+					<input th:field="*{name}" type="text" class="form-control" th:placeholder="#{field.name}"
 						aria-label="Name" aria-describedby="basic-addon1">
 				</div>
 				<div class="alert alert-danger" th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></div>
 				<div class="input-group mb-3">
 					<div class="input-group-prepend">
-						<span class="input-group-text" id="basic-addon1">Email</span>
+						<span class="input-group-text" id="basic-addon1" th:text="#{field.email}"></span>
 					</div>
-					<input th:field="*{email}" type="email" class="form-control" placeholder="Email"
+					<input th:field="*{email}" type="email" class="form-control" th:placeholder="#{field.email}"
 						aria-label="Email" aria-describedby="basic-addon1">
 				</div>
 				<div class="alert alert-danger" th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></div>
 				<div class="input-group mb-3">
 					<div class="input-group-prepend">
-						<span class="input-group-text" id="basic-addon1">Username</span>
+						<span class="input-group-text" id="basic-addon1" th:text="#{field.username}"></span>
 					</div>
-					<input th:field="*{username}" type="text" class="form-control" placeholder="Username"
+					<input th:field="*{username}" type="text" class="form-control" th:placeholder="#{field.username}"
 						aria-label="Username" aria-describedby="basic-addon1">
 				</div>
 				<div class="alert alert-danger" th:if="${#fields.hasErrors('username')}" th:errors="*{username}"></div>
 				<div class="input-group mb-3">
 					<div class="input-group-prepend">
-						<span class="input-group-text" id="basic-addon1">Password</span>
+						<span class="input-group-text" id="basic-addon1" th:text="#{field.password}"></span>
 					</div>
-					<input th:field="*{password}" type="password" class="form-control" placeholder="Password"
+					<input th:field="*{password}" type="password" class="form-control" th:placeholder="#{field.password}"
 						aria-label="Password" aria-describedby="basic-addon1">
 				</div>
 				<div class="alert alert-danger" th:if="${#fields.hasErrors('password')}" th:errors="*{password}"></div>
-				<button type="submit" class="btn btn-block btn-dark">Sign In</button>
+				<button type="submit" class="btn btn-block btn-dark" th:text="#{field.signin}"></button>
 			</form>
-			<pre th:text="${user}"></pre>
 		</div>
 	</div>
 
