--- a/src/main/resources/templates/logout.html
+++ b/src/main/resources/templates/logout.html
@@ -11,14 +11,14 @@
 
 	<div class="container">
 		<div class="jumbotron">
-			<h2>Logout</h2>
+			<h2 th:text="#{logout.title}"></h2>
 		</div>
 
 		<div class=" mr-auto ml-auto col-6">
 			<form action="#" th:action="@{/logout}"
 				method="POST">
-				<h4 class="text-center">Are you sure?</h4>
-				<button type="submit" class="btn btn-block">Logout</button>
+				<h4 class="text-center" th:text="#{logout.desc}"></h4>
+				<button type="submit" class="btn btn-block" th:text="#{logout.logout}"></button>
 			</form>
 		</div>
 
