--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,7 +8,7 @@
 <title>Loja-Virtual</title>
 </head>
 <body>
-	<div th:replace="/fragments/header :: header"></div>
+	<div th:replace="fragments/header :: header"></div>
 
 	<div class="container">
 		<div class="jumbotron">
@@ -18,7 +18,7 @@
 		<!--  <pre th:text="${principal}"></pre> --> 
 	</div>
 
-	<div th:replace="/fragments/footer :: footer"></div>
+	<div th:replace="fragments/footer :: footer"></div>
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
 	<script
 		src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
