--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -7,7 +7,7 @@
 <title>Loja-Virtual</title>
 </head>
 <body>
-	<div th:replace="/fragments/header :: header"></div>
+	<div th:replace="fragments/header :: header"></div>
 
 	<div class="container">
 		<div class="jumbotron">
@@ -47,7 +47,7 @@
 
 	</div>
 
-	<div th:replace="/fragments/footer :: footer"></div>
+	<div th:replace="fragments/footer :: footer"></div>
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
 	<script
 		src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
